# electric-load-forecasting-with-machine-learning

./: 01_load_forecasting_machine_learning_blog.md  01_load_forecasting_machine_learning_blog.md.bak2  01_load_forecasting_machine_learning_blog.py  README.md  article.md  benchmark_rust.py  pyproject.toml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
