[project]
name = "electric-load-forecasting-with-machine-learning"
version = "0.1.0"
description = "Companion code for Medium article: electric load forecasting with machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "lightgbm>=4.5.0",
    "mlflow>=2.20.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pmdarima>=2.0.4",
    "scikit-learn>=1.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "electric_load_forecasting_with_machine_learning_rs"

